k8s/app.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: main-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        name: main-app-container
        image: dsecid/msi_app
        ports:
          containerPort: 5000

        imagePullPolicy: Always
      imagePullSecrets:
        name: registry-secret

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-service
  ports:
    protocol: TCP
    port: 5000
    targetPort: 5000
